<resources>
    <string name="app_name">My News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="collection_enter">введите сообщение</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_photo">Photo</string>

    <string-array name="category">
        <item>science</item>
        <item>health</item>
        <item>technology</item>
        <item>entertainment</item>
        <item>business</item>
        <item>sports</item>
        <item>general</item>
        <item>general</item>
        <item>general</item>
        <item>general</item>
        <item>general</item>
        <item>general</item>
        <item>general</item>
    </string-array>

    <string-array name="days">
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
        <item>вс</item>
    </string-array>

    <string name="rover">rover</string>
    <string name="news">News</string>
</resources>