<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/firstFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/mainFragment"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/newsFragment"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/news" />
        <item
            android:id="@+id/visitorFragment"
            android:icon="@drawable/side_nav_bar"
            android:title="multiple" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/side_nav_bar"
            android:title="collection" />

    </group>
</menu>