<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.shu.mynews.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.shu.mynews.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.shu.mynews.ui.mainFragment.MainFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/firstFragment"
        android:name="com.shu.mynews.ui.gallery.FirstFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_first" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.shu.mynews.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_detailNewsFragment"
            app:destination="@id/detailNewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailNewsFragment"
        android:name="com.shu.mynews.ui.detail.DetailNewsFragment"
        android:label="DetailNewsFragment" >
        <action
            android:id="@+id/action_detailNewsFragment_to_zoomFragment"
            app:destination="@id/zoomFragment" />
        <argument
            android:name="news"
            app:argType="com.shu.mynews.ui.detail.model.DetailNews" />
    </fragment>
    <fragment
        android:id="@+id/zoomFragment"
        android:name="com.shu.mynews.ui.zoom.ZoomFragment"
        android:label="ZoomFragment" >
        <argument
            android:name="urlImage"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.shu.mynews.ui.home.HomeFragment"
        android:label="HomeFragment" />
    <fragment
        android:id="@+id/visitorFragment"
        android:name="com.shu.mynews.ui.visitor.main.VisitorFragment"
        android:label="fragment_visitor"
        tools:layout="@layout/fragment_visitor" />
</navigation>